--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,11 +25,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Base-Head diff
+        run: git diff --name-status origin/${{github.base_ref}}..origin/${{github.head_ref}}
+      
+      - name: Head-Base diff
+        run: git diff --name-status origin/${{github.head_ref}}..origin/${{github.base_ref}}
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+
