--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: check git
+        run: |
+          ls
+          git log --oneline
 
       # Runs a single command using the runners shell
       - name: Base-Head diff
